summative.moria.Moria.scala.error
Compilation error:
Moria:3: error: value =! is not a member of Int
  if (estFaceMur() && !estSurBiscuit() && getX()=!0)
                                                ^