summative.moria.Moria.scala.code
def proche() : Boolean =
{
  if (estFaceMur() && !estSurBiscuit() && getX()=!0)
  {
    return true
  }
  else 
  {
    return false  
  }
}

def deplacement() 
{
  while (!estSurBiscuit())
    {
      recule()
    }
  prendBiscuit()
  while (!estSurBiscuit())
  {
    avance()
  }
  recule()
  poseBiscuit()

}

def solution()
{
  while (!proche())
  {
    deplacement()
  }
  gauche();avance();droite();avance()
}